--- a/src/App.css
+++ b/src/App.css
@@ -5,28 +5,30 @@
   font-weight: normal;
   font-style: normal;
 }
-
 .App {
   text-align: center;
   font-family: "nokianregular", Arial, Helvetica, sans-serif;
 }
-
 .App-logo {
   animation: App-logo-spin infinite 7s linear;
   height: 80px;
 }
-
 .App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
-
-.App-intro {
-  font-size: large;
+.App-header h2 {
+  position: relative;
+  z-index: 2;
+  background: aqua;
+  background-color: #222222;
+  width: fit-content;
+  text-align: center;
+  margin: 30px auto;
+  padding: 10px;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -34,4 +36,41 @@
   to {
     transform: rotate(360deg);
   }
+}
+.phone-wrapper {
+  background-image: url("assets/phone_background.png");
+  background-repeat: no-repeat;
+  background-position-x: 50%;
+  text-align: center;
+  position: absolute;
+  top: -250px;
+  margin: 0px auto;
+  width: 100%;
+  height: 1600px;
+}
+.phone-content {
+  position: relative;
+  z-index: 5;
+  width: 385px;
+  height: 294px;
+  margin: 440px auto;
+}
+.clickable-map {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  margin: auto;
+}
+.map_image {
+  display: block;
+  margin: 0px auto;
+}
+.number_input,
+.number_input:focus,
+.number_input:active {
+  background: #749a75;
+  border: 1px dashed black;
+  outline: none;
+  font-size: 25px;
 }
